# darktable-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
darktable_mcp/: __init__.py  server.py
darktable_mcp/bridge/: __init__.py  client.py
darktable_mcp/cli/: __init__.py  install_plugin.py
darktable_mcp/darktable/: __init__.py  cli_wrapper.py  library_db.py  library_detector.py  lua_executor.py
darktable_mcp/lua/: darktable_mcp.lua
darktable_mcp/tools/: __init__.py  camera_tools.py  photo_tools.py  preview_tools.py
darktable_mcp/utils/: __init__.py  errors.py  validation.py
docs/superpowers/plans/: 2026-04-25-darktable-mcp.md  2026-04-26-camera-import.md  2026-04-27-honesty-pass.md  2026-04-27-ipc-bridge-mvp.md
docs/superpowers/specs/: 2026-04-25-headless-lua-integration-design.md  2026-04-26-camera-import-design.md  2026-04-27-honesty-pass-design.md  2026-04-27-ipc-bridge-mvp-design.md  2026-04-27-ipc-bridge-mvp-spike-findings.md  2026-04-28-iter2-5-design.md  2026-04-28-iter3-design.md
examples/: smoke_test_bridge.py  smoke_test_filter.py
spike/: lua_worker_probe.lua
tests/: __init__.py  test_bridge.py  test_camera_tools.py  test_darktable.py  test_errors.py  test_honesty_pass_acceptance.py  test_install_plugin.py  test_integration.py  test_ipc_bridge_acceptance.py  test_library_db.py  test_library_detector.py  test_lua_dispatcher.py  test_lua_executor_headless.py  test_photo_tools.py  test_preview_tools.py  test_server.py  test_validation.py  test_view_photos.py
tests/lua/: test_dispatcher.lua
